--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2108,15 +2108,15 @@ button,
         top: 0; } }
 
 /* Banner */
-#banner {
+.banner {
   padding: 6em 0 4em 0 ;
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex; }
-  #banner h1 {
+  .banner h1 {
     margin-top: -0.125em; }
-  #banner .content {
+  .banner .content {
     -moz-flex-grow: 1;
     -webkit-flex-grow: 1;
     -ms-flex-grow: 1;
@@ -2126,7 +2126,7 @@ button,
     -ms-flex-shrink: 1;
     flex-shrink: 1;
     width: 50%; }
-  #banner .image {
+  .banner .image {
     -moz-flex-grow: 0;
     -webkit-flex-grow: 0;
     -ms-flex-grow: 0;
@@ -2138,7 +2138,7 @@ button,
     display: block;
     margin: 0 0 2em 4em;
     width: 50%; }
-    #banner .image img {
+    .banner .image img {
       height: 100%;
       -moz-object-fit: cover;
       -webkit-object-fit: cover;
@@ -2150,14 +2150,14 @@ button,
       object-position: center;
       width: 100%; }
   @media screen and (orientation: portrait) {
-    #banner {
+    .banner {
       -moz-flex-direction: column-reverse;
       -webkit-flex-direction: column-reverse;
       -ms-flex-direction: column-reverse;
       flex-direction: column-reverse; }
-      #banner h1 br {
+      .banner h1 br {
         display: none; }
-      #banner .content {
+      .banner .content {
         -moz-flex-grow: 0;
         -webkit-flex-grow: 0;
         -ms-flex-grow: 0;
@@ -2167,7 +2167,7 @@ button,
         -ms-flex-shrink: 0;
         flex-shrink: 0;
         width: 100%; }
-      #banner .image {
+      .banner .image {
         -moz-flex-grow: 0;
         -webkit-flex-grow: 0;
         -ms-flex-grow: 0;
@@ -2182,7 +2182,7 @@ button,
         min-height: 18em;
         width: 100%; } }
   @media screen and (orientation: portrait) and (max-width: 480px) {
-    #banner .image {
+    .banner .image {
       max-height: 35vh; } }
 
 /* Footer */
