--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -142,7 +142,7 @@ h1, h2, h3, h4, h5, h6 {
     border-bottom: 0; }
 
 h1 {
-  font-size: 4em;
+  font-size: 3.5em;
   margin: 0 0 0.5em 0;
   line-height: 1.3; }
 
@@ -2182,7 +2182,7 @@ button,
         min-height: 18em;
         width: 100%; } }
   @media screen and (orientation: portrait) and (max-width: 480px) {
-    .banner .image {
+    banner .image {
       max-height: 35vh; } }
 
 /* Footer */
