--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2157,6 +2157,7 @@ button,
       flex-direction: column-reverse; }
       #banner h1 br {
         display: none; }
+      #banner h1 { margin-top: -16em; }
       #banner .content {
         -moz-flex-grow: 0;
         -webkit-flex-grow: 0;
@@ -2182,8 +2183,9 @@ button,
         min-height: 18em;
         width: 100%; } }
   @media screen and (orientation: portrait) and (max-width: 480px) {
-    #banner .image {
-      max-height: 35vh; } }
+    #banner .image { max-height: 35vh; } 
+    #banner h1 { margin-top: -10em; }
+    }
 
 /* Footer */
 #footer .copyright {
