--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -163,11 +163,11 @@ h6 {
 
 @media screen and (max-width: 1680px) {
   h1 {
-    font-size: 3.5em; } }
+    font-size: 2em; } }
 
 @media screen and (max-width: 980px) {
   h1 {
-    font-size: 3.25em; } }
+    font-size: 2em; } }
 
 @media screen and (max-width: 736px) {
   h1 {
@@ -2109,7 +2109,7 @@ button,
 
 /* Banner */
 #banner {
-  padding: 6em 0 4em 0 ;
+  padding: 5em 0 4em 0 ;
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
@@ -2184,7 +2184,8 @@ button,
         width: 100%; } }
   @media screen and (orientation: portrait) and (max-width: 480px) {
     #banner .image { max-height: 35vh; } 
-    #banner h1 { margin-top: -10em; }
+    #banner h1 { margin-top: -.5em; }
+    #banner {  padding: 1em 0 4em 0;}
     }
 
 /* Footer */
