--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2017,7 +2017,8 @@ button,
         #sidebar .toggle:before {
           font-size: 1.5rem; }
       #sidebar.inactive {
-        margin-left: -24em; } }
+        margin-left: -24em; } 
+      }
   @media screen and (max-width: 1280px) {
     #sidebar {
       box-shadow: 0 0 5em 0 rgba(0, 0, 0, 0.175);
